Fixed footer on mobile for contact componenet

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -103,3 +103,9 @@
   width: 25px;
   height: 25px;
 }
+
+/* Mobile */
+
+.mobile-fragment {
+  height: 100vh !important;
+}
